--- a/enter/src/style/_fonts.scss
+++ b/enter/src/style/_fonts.scss
@@ -10,3 +10,9 @@
 %sub-subtitle-font{
     font-size: clamp(22px, 3vw, 32px);
 }
+%sub-content-font{
+    font-size: clamp(12px, 1.8vw,16px);
+}
+%card-font{
+    font-size: clamp(30px, 5vw, 48px);
+}
