--- a/enter/src/style/style.scss
+++ b/enter/src/style/style.scss
@@ -1,10 +1,17 @@
 @import url("https://use.fontawesome.com/releases/v5.15.2/css/all.css");
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap');
 @import "_fonts.scss";
 $main-black: #060b11;
 $main-color: #17375e;
+$sub-color: #808080;
 body{
     min-height: 200vh;
     font-family: "Roboto, sans-serif";
+    word-break: keep-all;
+    max-width: 100vw;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;  
+    box-sizing: border-box; 
 }
 
 .bg-nav{
@@ -92,6 +99,7 @@ a, a:hover, a:focus, a:active {
     .mobile-none{
         display: none;
     }
+    
 }
 
 // 여기서부터 home-company
@@ -181,6 +189,14 @@ a, a:hover, a:focus, a:active {
     @extend %subtitle-font;
     font-weight: 700;
 }
+.sub-subtitle{
+    @extend %sub-subtitle-font;
+    font-weight: 700;
+}
+.sub-content{
+    @extend %sub-content-font;
+    color: $sub-color;
+}
 .from300-100{
     padding-top: clamp(100px, 10vw, 300px);
 }
@@ -200,4 +216,146 @@ a, a:hover, a:focus, a:active {
     height: 6px;
     width: 100%;
     background-color: $main-color;
+}
+.service-progress{
+    border: 1px solid #bfbfbf;
+    margin-top: 30px;
+    padding: clamp(20px, 5vw, 80px) clamp(20px, 6vw, 100px);
+    #stepProgressBar{
+        display: flex;
+        justify-content: center;
+        align-items: flex-end;
+        width: 100%;
+        margin: 0 auto;
+        margin-bottom: 40px;
+        .step{
+            text-align: center;
+            width: 25%;
+            .step-text{
+                text-align: left;
+                padding-left: 8px;
+            }
+            .d-flex{
+                .bullet{
+                    height: 60px;
+                    min-width: 60px;
+                    border-radius: 50%;
+                    background-color: #e5e5e5;
+                    color: #fff;
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+                    position: relative;
+                    transition: background-color 500ms;
+                    line-height: 20px;
+                    z-index: 1;
+                    &.completed{
+                        background-color: $main-color;
+                    }
+                }
+                .progress-line{
+                    width: 100%;
+                    height: 5px;
+                    background-color: $main-color;
+                    transition: background-color 500ms;
+                    &.disabled{
+                        background-color: #e5e5e5;
+                    }
+                }
+            }
+            &:nth-child(4){
+                width: 66px;
+            }
+        }
+    }
+}
+.col-md-6.text-center.justify-content-center{
+
+}
+.content-box{
+    padding: 50px 0px;
+    width: 100%;
+    border: 1px solid #e4e4e4;
+    p:nth-child(1){
+        font-weight: bold;
+    }
+    p:nth-child(2){
+        color: #8c8c8c;
+    }
+    .box-img{
+        width: 95%;
+        max-width: 450px;
+        object-fit: contain;
+    }
+}
+.box-img-2{
+    max-width: 100%;
+}
+.company-card{
+    background-color: $main-color;
+    .card-shift{
+        padding: clamp(20px, 10vw, 120px) 0px;
+        .card-font{
+            font-family: 'Inter';
+            font-weight: 800;
+            @extend %card-font;
+        }
+        .below-title{
+            margin: 0px calc(100% / 6);
+        }
+        .btn-contact{
+            background-color: #fff;
+            color: $main-color;
+            padding: 12px 32px;
+            font-size: 16px;
+            font-weight: 500;
+            font-family: 'Roboto',sans-serif;
+        }
+    }
+}
+@media screen and (max-width: 992px) {
+    .company-card{
+        .card-shift{
+            .below-title{
+                margin: 0px;
+            }
+        }
+    }
+}
+//footer
+
+.footer-custom{
+    background-color: $main-black;
+    color: #fff;
+}
+.logo-base{
+    flex-wrap: wrap;
+    height: 46px;
+    width: 46px;
+    .logo-component{
+        width: 50%;
+        height: 50%;
+        &:nth-child(2){
+            background-color: #a6d1ee;
+        }
+        &:nth-child(3){
+            background-color: #44719e;
+        }
+        &:nth-child(4){
+            background-color: #17375e;
+        }
+    }
+}
+.footer-between{
+    margin-top: 30px;
+    width: clamp(50%, 400px, 100%);
+    gap: 30px clamp(10px, 4vw, 50px);
+    grid-template-columns: repeat(6,1fr);
+    grid-auto-rows: auto;
+    span:nth-child(2){
+        grid-column: 2/-1;
+    }
+    span:nth-child(8){
+        grid-column: 1/-1;
+    }
 }
