--- a/enter/src/style/_fonts.scss
+++ b/enter/src/style/_fonts.scss
@@ -19,3 +19,9 @@
 %card-font{
     font-size: clamp(30px, 5vw, 48px);
 }
+%card-subtitle-font{
+    font-size: clamp(18px, 3vw, 40px);
+}
+%card-content-font{
+    font-size: clamp(12px, 2vw, 18px);
+}
