--- a/enter/src/style/style.scss
+++ b/enter/src/style/style.scss
@@ -64,6 +64,10 @@ a, a:hover, a:focus, a:active {
     top: clamp(71px,5vw,113px);
     z-index: 2;
     .btn-content-change{
+        font-weight: 700;
+        color: rgba(0,0,0,.6);
+        width: 150px;
+        max-width: 50%;
         border-color: #17375e;
         background-color: transparent;
         padding: 10px;
@@ -73,7 +77,7 @@ a, a:hover, a:focus, a:active {
             background-color: #eeeeee;
         }
         &.active{
-
+            color: $main-color;
             border-bottom: 2px solid #17375e;
         }
     }
@@ -109,7 +113,7 @@ a, a:hover, a:focus, a:active {
 .position-dot{
     position: absolute;
     height: 100vh;
-    max-width: 1920px!important;
+    // max-width: 1920px!important;
     z-index: -1;
     .dot{
         &-1{
@@ -504,4 +508,61 @@ a, a:hover, a:focus, a:active {
     max-height: 480px;
     width: 100%;
     object-fit: cover;
+}
+
+    .karlxyz{
+        padding: 120px clamp(10px, 4vw, 60px);
+    }
+.kyu{
+    @extend %card-subtitle-font;
+}
+.kyu-2{
+
+}
+.kyu-3{
+    @extend %card-content-font;
+}
+//소통
+.bg-announce{
+    background-color: $main-color;
+}
+.announce-height{
+    height: clamp(320px, 80vw, 500px);
+}
+.announce-search{
+    height: 100%;
+    flex-direction: column;
+    .title{
+        font-size: 36px;
+        font-family: 'Noto Sans KR', sans-serif;
+        text-align: left;
+        font-weight: 700;
+        color: #fff;
+        @media screen and (max-width: 768px) {
+            align-self: flex-start;
+        }
+    }
+    .card{
+        width: 100%;
+        border-radius: 10em;
+        .card-body{
+            .input-group.input-group-lg{
+                input{
+                    border: 0px!important;
+                   
+                }
+                .input-group-text{
+                    background-color: transparent;
+                    cursor: pointer;
+                    border-radius: 10em;
+                    border-top-left-radius: 10em!important;
+                    border-bottom-left-radius: 10em!important;
+                    transition:  background-color .5s ease-in-out;
+                    &:hover{
+                        background-color: #eeeeee;  
+                    }
+                }
+            }
+        }
+    }
 }
