--- a/enter/src/style/style.scss
+++ b/enter/src/style/style.scss
@@ -4,11 +4,17 @@
 $main-black: #060b11;
 $main-color: #17375e;
 $sub-color: #808080;
+
+html{
+    max-height: min-content;
+}
+
 body{
-    min-height: 200vh;
+
     font-family: "Roboto, sans-serif";
     word-break: keep-all;
     max-width: 100vw;
+    max-height: min-content;
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;  
     box-sizing: border-box; 
@@ -83,11 +89,16 @@ a, a:hover, a:focus, a:active {
     }
 }
 .home-content{
-    display: none;
-    margin-top: clamp(71px,5vw,113px);
-    transition: display .8s ease-in-out,opacity .15s linear;
+    height: 0;
+    opacity: 0;
+    visibility: hidden;
+    overflow: hidden;
+    transition: opacity .5s ease-in-out;
     &.active{
-        display: block;
+        margin-top: clamp(71px,5vw,113px);
+        visibility: visible;
+        height: min-content;
+        opacity: 1;
     }
 }
 .nav-tabs{
@@ -565,4 +576,79 @@ a, a:hover, a:focus, a:active {
             }
         }
     }
+}
+.table>:not(caption)>*>* {
+    padding: 1rem 1.4rem;
+}
+.bg-gray{
+    background-color: #e6e6e6;
+}
+.hr-link{
+    cursor: pointer;
+    &:hover{
+        text-decoration: underline;
+    }
+}
+tr{
+    transition: background-color .5s;
+    &:hover{
+        background-color: #f1f1f1;
+    }
+}
+@media screen and (min-width: 992px) {
+    .mobile-display{
+        display: none;
+    }
+}
+@media screen and (max-width: 992px) {
+    .mobile-display{
+        display: block;
+    }
+}
+.mobile-display{
+    max-width: 100%;
+    .list-wrap{
+        padding: 10px 0px;
+        border-top: 1px solid #e6e6e6;
+        &:last-child{
+            border-bottom: 1px solid #e6e6e6;
+        }
+    }
+    .list-title{
+        font-size: 12px;
+        font-weight: 700;
+        color: $main-black;
+        
+    }
+    .list-content{
+        font-family: Noto Sans;
+        color: #060b11;
+        font-weight: 500;
+        height: 24px;
+        text-overflow: ellipsis;
+        overflow: hidden;
+        white-space: nowrap;
+    }
+}
+
+.bg-click{
+    margin-top: clamp(71px, 5vw, 113px);
+    background-color: #f9f9f9;
+    min-height: 400px;
+    .container{
+        .card-font{
+            @extend %card-font;
+            font-weight: 700;
+        }
+        p:nth-child(3){
+            color: #bfbfbf;
+        }
+    }
+}
+.onclick-content{
+    margin-top: 100px;
+    line-height: 2rem;
+    min-height: 475px;
+    border-top: 1px solid #8c8c8c;
+    border-bottom: 1px solid #8c8c8c;
 }
