--- a/enter/src/style/style.scss
+++ b/enter/src/style/style.scss
@@ -90,8 +90,8 @@ a, a:hover, a:focus, a:active {
 }
 .home-content{
     height: 0;
-    opacity: 0;
     visibility: hidden;
+    opacity: 0;
     overflow: hidden;
     transition: opacity .5s ease-in-out;
     &.active{
@@ -538,7 +538,7 @@ a, a:hover, a:focus, a:active {
     background-color: $main-color;
 }
 .announce-height{
-    height: clamp(320px, 80vw, 500px);
+    height: clamp(350px, 80vw, 500px);
 }
 .announce-search{
     height: 100%;
@@ -560,7 +560,9 @@ a, a:hover, a:focus, a:active {
             .input-group.input-group-lg{
                 input{
                     border: 0px!important;
-                   
+                   &::placeholder{
+                       font-size: clamp(16px,2vw,20px);
+                   }
                 }
                 .input-group-text{
                     background-color: transparent;
@@ -647,8 +649,30 @@ tr{
 }
 .onclick-content{
     margin-top: 100px;
+    padding: 30px 10px;
     line-height: 2rem;
     min-height: 475px;
     border-top: 1px solid #8c8c8c;
     border-bottom: 1px solid #8c8c8c;
+}
+.btn-목록{
+    background-color: #fff;
+    color: #4f4f4f;
+    border: 1px solid #8c8c8c;
+    border-radius: .25rem;
+    padding: 12px 32px;
+}
+
+//accordion
+
+.accordion-button:not(.collapsed){
+    background-color: #eeeeee;
+    color: $main-black;
+}
+.accordion-button:focus{
+    border-color: #e6e6e6;
+    box-shadow: 0 0 0 0.25rem #e6e6e6;
+}
+.accordion-button:not(.collapsed)::after {
+   color: $main-black;
 }
