--- a/enter/src/style/style.scss
+++ b/enter/src/style/style.scss
@@ -664,7 +664,9 @@ tr{
 }
 
 //accordion
-
+.accordion-button{
+    font-size: 20px;
+}
 .accordion-button:not(.collapsed){
     background-color: #eeeeee;
     color: $main-black;
