--- a/enter/src/style/style.scss
+++ b/enter/src/style/style.scss
@@ -39,6 +39,9 @@ body {
 .navbar-dark .navbar-toggler {
   border-color: transparent;
 }
+.navbar-light .navbar-toggler{
+  border-color: transparent;
+}
 .navbar-collapse {
   flex-grow: 0;
 }
